# auto_selfcal

./: .gitignore  .readthedocs.yaml  .zenodo.json  LICENSE  README.md  alignment_helpers.py  applycal_wrapper.py  auto_selfcal.py  casa6.yaml  environment.yaml  gaincal_wrapper.py  image_analysis_helpers.py  mosaic_helpers.py  prepare_selfcal.py  pyproject.toml  regenerate_weblog.py  requirements.txt  run_selfcal.py  selfcal_helpers.py  split_calibrated_final.py  weblog_creation.py
.github/workflows/: publish-to-pypi.yml  run_E2E_test.yml
auto_selfcal/: __init__.py  __main__.py  alignment_helpers.py  applycal_wrapper.py  auto_selfcal.py  casa_tools.py  gaincal_wrapper.py  image_analysis_helpers.py  mosaic_helpers.py  original_ms_helpers.py  prepare_cocal.py  prepare_selfcal.py  regenerate_weblog.py  run_selfcal.py  selfcal_helpers.py  split_calibrated_final.py  weblog_creation.py
auto_selfcal/tests/: test_auto_selfcal.py
docs/: alignment_helpers.rst  api.rst  conf.py  data.rst  index.rst  installation.rst  requirements.txt  running.rst  selfcal_helpers.rst  weblog.rst
