[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auto_selfcal"
version = "3.0"
authors = [
  { name="John Tobin", email="jtobin@nrao.edu" },
  { name="Patrick Sheehan", email="psheehan@nrao.edu" },
]
description = "Automated self-calibration of interferometric data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "casatools>=6.5.3.28,<=6.5.6.22",
    "casatasks>=6.5.3.28,<=6.5.6.22",
    "casaplotms",
    "casaviewer<=2.0.1",
    "protobuf<=3.20.3",
]

[project.optional-dependencies]
mpi = ["casampi"]

[project.urls]
Homepage = "https://github.com/jjtobin/auto_selfcal"
Issues = "https://github.com/jjtobin/auto_selfcal/issues"

[project.scripts]
auto_selfcal = "auto_selfcal:__main__"
